// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme=refresh-toolbar, Size=desktop contract for default use-case 1`] = `
Map {
  [Function] => {
    "children": [Function],
    "forwardRef": null,
    "onMount": [Function],
    "props": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "toolsWidth": 290,
    },
  },
}
`;

exports[`Theme=refresh-toolbar, Size=desktop contract with all slots provided 1`] = `
Map {
  [Function] => {
    "children": [Function],
    "forwardRef": null,
    "onMount": [Function],
    "props": {
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "breadcrumbs": <div>
        breadcrumbs
      </div>,
      "content": <div>
        content
      </div>,
      "contentType": "default",
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigation": <div>
        navigation
      </div>,
      "navigationOpen": true,
      "navigationWidth": 280,
      "notifications": <div>
        notifications
      </div>,
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "splitPanel": <div>
        split panel
      </div>,
      "tools": <div>
        tools
      </div>,
      "toolsWidth": 290,
    },
  },
}
`;

exports[`Theme=refresh-toolbar, Size=desktop contract with drawers 1`] = `
Map {
  [Function] => {
    "children": [Function],
    "forwardRef": null,
    "onMount": [Function],
    "props": {
      "activeDrawerId": "security",
      "ariaLabels": {
        "drawers": undefined,
        "drawersOverflow": undefined,
        "drawersOverflowWithBadge": undefined,
        "navigation": undefined,
        "navigationClose": undefined,
        "navigationToggle": undefined,
        "notifications": undefined,
        "tools": undefined,
        "toolsClose": undefined,
        "toolsToggle": undefined,
      },
      "contentType": "default",
      "drawers": [
        {
          "ariaLabels": {
            "closeButton": "Security close button",
            "drawerName": "Security drawer content",
            "resizeHandle": "Security resize handle",
            "triggerButton": "Security trigger button",
          },
          "content": <span>
            Security
          </span>,
          "id": "security",
          "trigger": {
            "iconName": "security",
          },
        },
      ],
      "maxContentWidth": undefined,
      "minContentWidth": 280,
      "navigationOpen": true,
      "navigationWidth": 280,
      "onDrawerChange": [Function],
      "onNavigationChange": [Function],
      "placement": {
        "inlineSize": Infinity,
        "insetBlockEnd": 0,
        "insetBlockStart": 0,
        "insetInlineEnd": 0,
        "insetInlineStart": 0,
      },
      "toolsWidth": 290,
    },
  },
}
`;
